@@ -13,7 +13,7 @@
 //
 //=================================================================
 // Copyright (C) 2005-2010 Dana M. Proctor
-// Version 11.23 05/17/2010
+// Version 11.24 05/19/2010
 //
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -438,6 +438,8 @@
 //       11.23 Class Method getColumnNames() Changed Instance columnSize From Type Object
 //             to Integer. Class Method loadTable() Changed Instance keyLength From String
 //             to Integer. Removed Unecessary Casts for the HashMaps.
+//       11.24 Class Methods getColumnNames() and loadTable() Assigned Integer via valueOf()
+//             Instead of new Integer for Instances columnSize & preferredColumnSizeHashMap.
 //        
 //-----------------------------------------------------------------
 //                danap@dandymadeproductions.com
@@ -462,7 +464,7 @@ import java.util.Iterator;
  * through the database table's data.
  * 
  * @author Dana M. Proctor
- * @version 11.23 05/17/2010
+ * @version 11.24 05/19/2010
  */
 
 class TableTabPanel_MySQL extends TableTabPanel
@@ -571,7 +573,7 @@ class TableTabPanel_MySQL extends TableTabPanel
             comboBoxNameString = parseColumnNameField(colNameString);
             columnClass = tableMetaData.getColumnClassName(i);
             columnType = tableMetaData.getColumnTypeName(i);
-            columnSize = new Integer(tableMetaData.getColumnDisplaySize(i));
+            columnSize = Integer.valueOf(tableMetaData.getColumnDisplaySize(i));
 
             // System.out.println(i + " " + colNameString + " " +
             // comboBoxNameString + " " +
@@ -592,7 +594,8 @@ class TableTabPanel_MySQL extends TableTabPanel
             columnClassHashMap.put(comboBoxNameString, columnClass);
             columnTypeHashMap.put(comboBoxNameString, columnType.toUpperCase());
             columnSizeHashMap.put(comboBoxNameString, columnSize);
-            preferredColumnSizeHashMap.put(comboBoxNameString, new Integer(comboBoxNameString.length() * 9));
+            preferredColumnSizeHashMap.put(comboBoxNameString,
+                                           Integer.valueOf(comboBoxNameString.length() * 9));
 
             fields.addElement(colNameString);
             viewFormFields.addElement(comboBoxNameString);
@@ -971,7 +974,7 @@ class TableTabPanel_MySQL extends TableTabPanel
                   if (preferredColumnSize > maxPreferredColumnSize)
                      preferredColumnSize = maxPreferredColumnSize;
                }
-               preferredColumnSizeHashMap.put(currentHeading, new Integer(preferredColumnSize));
+               preferredColumnSizeHashMap.put(currentHeading, Integer.valueOf(preferredColumnSize));
             }
             j = 0;
             i++;
