@@ -13,7 +13,7 @@
 //
 //==============================================================
 // Copyright (C) 2007-2010 Dana M. Proctor
-// Version 11.1 05/17/2010
+// Version 11.2 05/19/2010
 //
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -263,6 +263,9 @@
 //        11.1 Class Method getColumnNames() Changed Instance columnSize From Type Object
 //             to Integer. Class Method loadTable() Changed Instance keyLength From String
 //             to Integer. Removed Unecessary Casts for the HashMaps.
+//        11.2 Class Methods getColumnNames() and loadTable() Assigned Integer via
+//             valueOf() Instead of new Integer for Instances columnSize &
+//             preferredColumnSizeHashMap.
 //             
 //-----------------------------------------------------------------
 //                  danap@dandymadeproductions.com
@@ -288,7 +291,7 @@ import java.util.Iterator;
  * the mechanism to page through the database table's data.
  * 
  * @author Dana M. Proctor
- * @version 11.1 05/17/2010
+ * @version 11.2 05/19/2010
  */
 
 class TableTabPanel_PostgreSQL extends TableTabPanel //implements ActionListener
@@ -416,7 +419,7 @@ class TableTabPanel_PostgreSQL extends TableTabPanel //implements ActionListener
             comboBoxNameString = parseColumnNameField(colNameString);
             columnClass = tableMetaData.getColumnClassName(i);
             columnType = tableMetaData.getColumnTypeName(i);
-            columnSize = new Integer(tableMetaData.getColumnDisplaySize(i));
+            columnSize = Integer.valueOf(tableMetaData.getColumnDisplaySize(i));
 
             // System.out.println(i + " " + colNameString + " " +
             // comboBoxNameString + " " +
@@ -437,7 +440,8 @@ class TableTabPanel_PostgreSQL extends TableTabPanel //implements ActionListener
             columnClassHashMap.put(comboBoxNameString, columnClass);
             columnTypeHashMap.put(comboBoxNameString, columnType.toUpperCase());
             columnSizeHashMap.put(comboBoxNameString, columnSize);
-            preferredColumnSizeHashMap.put(comboBoxNameString, new Integer(comboBoxNameString.length() * 9));
+            preferredColumnSizeHashMap.put(comboBoxNameString,
+                                           Integer.valueOf(comboBoxNameString.length() * 9));
 
             fields.addElement(colNameString);
             viewFormFields.addElement(comboBoxNameString);
@@ -773,7 +777,8 @@ class TableTabPanel_PostgreSQL extends TableTabPanel //implements ActionListener
                   if (preferredColumnSize > maxPreferredColumnSize)
                      preferredColumnSize = maxPreferredColumnSize;
                }
-               preferredColumnSizeHashMap.put(currentHeading, new Integer(preferredColumnSize));
+               preferredColumnSizeHashMap.put(currentHeading,
+                                              Integer.valueOf(preferredColumnSize));
             }
             j = 0;
             i++;
